# Trahere

./: .qmlls.ini  CMakeLists.txt  CanvasWindow.qml  Main.qml  OraCreator.cpp  main.cpp  recentfilesmanager.cpp  recentfilesmanager.h
Images/: Test1.ora  testing5.ora
Test_Files/: ehehechan.ora  lmao.ora  shitman.ora  testing22.ora
ora/: OraCreator.cpp  OraCreator.h  OraLoader.cpp  OraLoader.h
src/: BrushEngine.cpp  BrushEngine.h  Canvas.cpp  Canvas.h  EraserTool.h  FillTool.cpp  FillTool.h  GLRenderer.cpp  GLRenderer.h  Layer.cpp  Layer.h  Tool.h  ToolManager.h
